pgmemcache 2.0.1
===================
* Remove some deprecated documentation
* Fix bug "[#1010761] Crash with pgmemcache 2.0.0 and postgres 8.4", thanks to Marc Munro for 
pointing out the problem and a fix for it.

pgmemcache 2.0.0
===================
Finally a 2.0.0 release. 

* Fix default (unset) GUC crashes, based on a patch from Claes Jakobsson
* Add BYTEA memcache_get
* Add TEXT[], BYTEA[] memcache_get_multi for the reduction of server roundtrips

pgmemcache 2.0 RC 1
===================
It looks likely that this is the last release before stamping this as 2.0.

* Fix pgmemcache not to throw an error when trying to delete a non-existent key from memcache.
(based on a report from Chander Ganesan)

pgmemcache 2.0 beta2
====================
On the way towards a 2.0 release:

* Make pgmemcache work on top of older versions of PostgreSQL (at least 8.3, probably earlier)
* Make libmemcached behavior configurable through PostgreSQL GUCs.
* prepend/append support

pgmemcache 2.0 beta1
====================

pgmemcache was completely rewritten to work on top of libmemcached. It requires PostgreSQL 8.4+ and
is not backwards compatible with older versions of PostgreSQL. That may or may not change depending
on how much are people interested in having it work on older versions. 

Also some API's were deprecated:
* memcache_server_find_hash
* memcache_flush (note, not flush all)
* memcache_server_list (use stats)
* memcache_server_remove
* memcache_hash

Also starting from 2.0 beta 1 the maintainership has moved to Hannu Valtonen. 

pgmemcache 1.2 beta1
====================

This release has a lot of new code and backward-incompatible changes;
it might be more accurate to label it "2.0".

* Add the pgmemcache.default_servers GUC variable. This specifies a
  list of memcached servers ('host:port' pairs) that pgmemcache will
  connect to by default. To use this, add pgmemcache to
  preload_shared_libraries and custom_variable_classes, and then